--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <script src="ckplayer/ckplayer.js"></script>
   <script src="js/liveplayer-lib.min.js"></script>
+  <script src="EasyPlayer/EasyWasmPlayer.js"></script>
   <title><%= webpackConfig.name %></title>
 </head>
 
